@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2024 DBeaver Corp and others
+ * Copyright (C) 2010-2025 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,18 +18,22 @@ package org.jkiss.dbeaver.model.sql.semantics;
 
 import org.antlr.v4.runtime.misc.Interval;
 import org.jkiss.code.NotNull;
+import org.jkiss.code.Nullable;
 import org.jkiss.dbeaver.Log;
 import org.jkiss.dbeaver.model.lsm.sql.impl.syntax.SQLStandardParser;
+import org.jkiss.dbeaver.model.sql.semantics.model.dml.SQLQuerySelectIntoModel;
 import org.jkiss.dbeaver.model.sql.semantics.model.expressions.SQLQueryValueExpression;
+import org.jkiss.dbeaver.model.sql.semantics.model.expressions.SQLQueryValueFlattenedExpression;
 import org.jkiss.dbeaver.model.sql.semantics.model.expressions.SQLQueryValueTupleReferenceExpression;
 import org.jkiss.dbeaver.model.sql.semantics.model.select.*;
 import org.jkiss.dbeaver.model.stm.STMKnownRuleNames;
 import org.jkiss.dbeaver.model.stm.STMTreeNode;
 import org.jkiss.dbeaver.model.stm.STMTreeTermNode;
+import org.jkiss.dbeaver.model.stm.STMUtils;
 
 import java.util.*;
 
-class SQLQueryExpressionMapper extends SQLQueryTreeMapper<SQLQueryRowsSourceModel, SQLQueryModelRecognizer> {
+public class SQLQueryExpressionMapper extends SQLQueryTreeMapper<SQLQueryRowsSourceModel, SQLQueryModelRecognizer> {
 
     private static final Log log = Log.getLog(SQLQueryExpressionMapper.class);
 
@@ -62,6 +66,7 @@ class SQLQueryExpressionMapper extends SQLQueryTreeMapper<SQLQueryRowsSourceMode
         STMKnownRuleNames.fromClause,
         STMKnownRuleNames.nonjoinedTableReference,
         STMKnownRuleNames.tableReference,
+        STMKnownRuleNames.fromClauseTerm,
         STMKnownRuleNames.joinedTable,
         STMKnownRuleNames.derivedTable,
         STMKnownRuleNames.tableSubquery,
@@ -86,7 +91,6 @@ class SQLQueryExpressionMapper extends SQLQueryTreeMapper<SQLQueryRowsSourceMode
 
                 STMTreeNode withNode = n.findFirstChildOfName(STMKnownRuleNames.withClause);
                 if (withNode != null) {
-                    boolean isRecursive = withNode.findFirstChildOfName(STMKnownRuleNames.RECURSIVE_TERM) != null;
                     List<SQLQueryRowsCteSubqueryModel> cteSubqueries = new ArrayList<>();
 
                     STMTreeNode cteListNode = withNode.findLastChildOfName(STMKnownRuleNames.cteList);
@@ -96,7 +100,7 @@ class SQLQueryExpressionMapper extends SQLQueryTreeMapper<SQLQueryRowsSourceMode
 
                         for (STMTreeNode cteSubqueryNode : cteListNode.findChildrenOfName(STMKnownRuleNames.with_list_element)) {
                             STMTreeNode subqueryNameNode = cteSubqueryNode.findFirstChildOfName(STMKnownRuleNames.queryName);
-                            SQLQuerySymbolEntry subqueryName = subqueryNameNode == null ? null : r.collectIdentifier(subqueryNameNode);
+                            SQLQuerySymbolEntry subqueryName = subqueryNameNode == null ? null : r.collectIdentifier(subqueryNameNode, null);
 
                             STMTreeNode columnListNode = cteSubqueryNode.findFirstChildOfName(STMKnownRuleNames.columnNameList);
                             List<SQLQuerySymbolEntry> columnList = columnListNode == null
@@ -104,12 +108,30 @@ class SQLQueryExpressionMapper extends SQLQueryTreeMapper<SQLQueryRowsSourceMode
                                 : r.collectColumnNameList(columnListNode);
 
                             SQLQueryRowsSourceModel subquerySource = subsources.getOrEmpty(cteSubqueryNode);
-                            cteSubqueries.add(new SQLQueryRowsCteSubqueryModel(cteSubqueryNode, subqueryName, columnList, subquerySource));
+                            SQLQueryLexicalScope subqueryTailScope = null;
+
+                            STMTreeNode subqueryNode = cteSubqueryNode.findLastChildOfName(STMKnownRuleNames.subquery);
+                            if (subqueryNode != null){
+                                STMTreeNode subqueryTrailingNode = subqueryNode.findLastChildOfName(STMKnownRuleNames.RIGHT_PAREN_TERM);
+                                if (subqueryTrailingNode != null) {
+                                    subqueryTailScope = new SQLQueryLexicalScope();
+                                    subqueryTailScope.setInterval(
+                                        Interval.of(subquerySource.getInterval().b + 1, subqueryTrailingNode.getRealInterval().a - 1)
+                                    );
+                                }
+                            }
+                            cteSubqueries.add(new SQLQueryRowsCteSubqueryModel(
+                                cteSubqueryNode,
+                                subqueryName,
+                                columnList,
+                                subquerySource,
+                                subqueryTailScope
+                            ));
                         }
                     }
-                    return new SQLQueryRowsCteModel(n, isRecursive, cteSubqueries, resultQuery);
+                    return new SQLQueryRowsCteModel(n, cteSubqueries, resultQuery);
                 } else {
-                    return new SQLQueryRowsCteModel(n, false, Collections.emptyList(), resultQuery);
+                    return new SQLQueryRowsCteModel(n, Collections.emptyList(), resultQuery);
                 }
             }
         },
@@ -168,31 +190,67 @@ class SQLQueryExpressionMapper extends SQLQueryTreeMapper<SQLQueryRowsSourceMode
                 for (STMTreeNode childNode : childNodes.subList(1, childNodes.size())) {
                     if (!(childNode instanceof STMTreeTermNode)) {
                         final SQLQueryRowsSourceModel currSource = source;
-                        final SQLQueryRowsSourceModel nextSource = subsources.getOrEmpty(childNode);
+                        final SQLQueryRowsSourceModel nextSource = subsources.getOrNull(childNode);
+                        STMTreeNode lastTermChild = nextSource != null ? null : STMUtils.expandTerms(childNode).getLast();
+                        SQLQueryLexicalScope rightTableScope = lastTermChild == null ? null : new SQLQueryLexicalScope();
+                        if (lastTermChild != null) {
+                            rightTableScope.setInterval(Interval.of(lastTermChild.getRealInterval().b + 1, Integer.MAX_VALUE));
+                        }
                         // TODO see second case of the first source if parens are correctly ignored here
                         Interval range = Interval.of(n.getRealInterval().a, childNode.getRealInterval().b);
+                        boolean isLateral = childNode.findFirstChildOfName(STMKnownRuleNames.LATERAL_TERM) != null;
                         source = switch (childNode.getNodeKindId()) {
                             case SQLStandardParser.RULE_naturalJoinTerm -> {
-                                Optional<STMTreeNode> joinConditionNode =
-                                    Optional.ofNullable(childNode.findFirstChildOfName(STMKnownRuleNames.joinSpecification))
-                                        .map(cn -> cn.findFirstChildOfName(STMKnownRuleNames.joinCondition));
-                                if (joinConditionNode.isPresent()) {
-                                    try (SQLQueryModelRecognizer.LexicalScopeHolder condScope = r.openScope()) {
-                                        condScope.lexicalScope.registerSyntaxNode(joinConditionNode.get());
-                                        yield joinConditionNode.map(cn -> cn.findFirstChildOfName(STMKnownRuleNames.searchCondition))
-                                            .map(r::collectValueExpression)
-                                            .map(e -> new SQLQueryRowsNaturalJoinModel(range, childNode, currSource, nextSource, e,
-                                                condScope.lexicalScope))
-                                            .orElseGet(() -> new SQLQueryRowsNaturalJoinModel(range, childNode, currSource, nextSource,
-                                                Collections.emptyList()));
+                                Optional<STMTreeNode> joinSpecificationNode = Optional.ofNullable(childNode.findFirstChildOfName(STMKnownRuleNames.joinSpecification));
+                                Optional<STMTreeNode> joinConditionNode = joinSpecificationNode.map(cn -> cn.findFirstChildOfName(STMKnownRuleNames.joinCondition));
+                                try (SQLQueryModelRecognizer.LexicalScopeHolder condScope = r.openScope()) {
+                                    if (joinSpecificationNode.isPresent()) {
+                                        if (joinConditionNode.isPresent()) {
+                                            joinSpecificationNode.map(cn -> cn.findFirstNonErrorChild())
+                                                .map(cn -> cn.findFirstNonErrorChild()) // condition scope starts after the ON keyword when present
+                                                .filter(cn -> cn instanceof STMTreeTermNode) // after the whitespace following the inclusive end position
+                                                .ifPresent(kw -> condScope.lexicalScope.setInterval(Interval.of(kw.getRealInterval().b + 2, Integer.MAX_VALUE)));
+                                            yield joinConditionNode.map(cn -> cn.findFirstChildOfName(STMKnownRuleNames.searchCondition))
+                                                .map(cn -> r.collectValueExpression(cn, condScope.lexicalScope))
+                                                .map(e -> new SQLQueryRowsNaturalJoinModel(
+                                                    range, childNode, currSource, nextSource, rightTableScope, isLateral,
+                                                    e, condScope.lexicalScope
+                                                ))
+                                                .orElseGet(() -> new SQLQueryRowsNaturalJoinModel(
+                                                    range, childNode, currSource, nextSource, rightTableScope, isLateral,
+                                                    (SQLQueryValueExpression) null, condScope.lexicalScope
+                                                ));
+                                        } else {
+                                            Optional<STMTreeNode> columnsSpecNode = joinSpecificationNode
+                                                .map(cn -> cn.findFirstNonErrorChild());
+                                            int condScopeEnd = columnsSpecNode
+                                                .map(cn -> cn.findLastChildOfName(STMKnownRuleNames.RIGHT_PAREN_TERM))
+                                                .map(cn -> cn.getRealInterval().a)
+                                                .orElse(Integer.MAX_VALUE);
+                                            columnsSpecNode
+                                                .map(cn -> cn.findFirstChildOfName(STMKnownRuleNames.LEFT_PAREN_TERM))
+                                                .ifPresent(cn -> condScope.lexicalScope.setInterval(Interval.of(cn.getRealInterval().b + 1, condScopeEnd)));
+                                            yield new SQLQueryRowsNaturalJoinModel(
+                                                range, childNode, currSource, nextSource, rightTableScope, isLateral,
+                                                r.collectColumnNameList(childNode), condScope.lexicalScope
+                                            );
+                                        }
+                                    } else {
+                                        yield new SQLQueryRowsNaturalJoinModel(
+                                            range,
+                                            childNode,
+                                            currSource,
+                                            nextSource,
+                                            rightTableScope,
+                                            isLateral,
+                                            (List<SQLQuerySymbolEntry>) null,
+                                            condScope.lexicalScope
+                                        );
                                     }
-                                } else {
-                                    yield new SQLQueryRowsNaturalJoinModel(range, childNode, currSource, nextSource,
-                                        r.collectColumnNameList(childNode));
                                 }
                             }
                             case SQLStandardParser.RULE_crossJoinTerm ->
-                                new SQLQueryRowsCrossJoinModel(range, childNode, currSource, nextSource);
+                                new SQLQueryRowsCrossJoinModel(range, childNode, currSource, nextSource, rightTableScope, isLateral);
                             default -> throw new UnsupportedOperationException(
                                 "Unexpected child node kind at queryExpression: " + childNode.getNodeName());
                         };
@@ -205,19 +263,21 @@ class SQLQueryExpressionMapper extends SQLQueryTreeMapper<SQLQueryRowsSourceMode
             if (cc.isEmpty()) {
                 return makeEmptyRowsModel(n);
             } else {
+                STMTreeNode firstTermChild = n.findFirstNonErrorChild() instanceof STMTreeTermNode t ? t : null; // FROM term
+                SQLQueryLexicalScope rightTableScope = firstTermChild != null ? new SQLQueryLexicalScope() : null;
+                if (firstTermChild != null) {
+                    rightTableScope.setInterval(Interval.of(firstTermChild.getRealInterval().b + 1, Integer.MAX_VALUE));
+                }
                 SubsourcesMap subsources = new SubsourcesMap(cc, n);
-                List<STMTreeNode> childNodes = n.findChildrenOfName(STMKnownRuleNames.tableReference);
-                SQLQueryRowsSourceModel source = subsources.getOrEmpty(childNodes.get(0));
-                for (STMTreeNode childNode : childNodes.subList(1, childNodes.size())) {
+                STMTreeNode firstChild = n.findFirstChildOfName(STMKnownRuleNames.tableReference);
+                List<STMTreeNode> restChilds = n.findChildrenOfName(STMKnownRuleNames.fromClauseTerm);
+                SQLQueryRowsSourceModel source = subsources.getOrEmpty(firstChild);
+                for (STMTreeNode childNode : restChilds) {
                     SQLQueryRowsSourceModel nextSource = subsources.getOrEmpty(childNode);
                     if (nextSource != null) {
                         Interval range = Interval.of(n.getRealInterval().a, childNode.getRealInterval().b);
-                        source = switch (childNode.getNodeKindId()) {
-                            case SQLStandardParser.RULE_tableReference ->
-                                new SQLQueryRowsCrossJoinModel(range, childNode, source, nextSource);
-                            default -> throw new UnsupportedOperationException(
-                                "Unexpected child node kind at fromClause: " + childNode.getNodeName());
-                        };
+                        boolean isLateral = childNode.findFirstChildOfName(STMKnownRuleNames.LATERAL_TERM) != null;
+                        source = new SQLQueryRowsCrossJoinModel(range, childNode, source, nextSource, rightTableScope, isLateral);
                     } else {
                         // certain tableReference subtree was not recognized correctly, consider error message
                     }
@@ -226,128 +286,37 @@ class SQLQueryExpressionMapper extends SQLQueryTreeMapper<SQLQueryRowsSourceMode
             }
         },
         STMKnownRuleNames.querySpecification, (n, cc, r) -> {
-            STMTreeNode selectListNode = n.findFirstChildOfName(STMKnownRuleNames.selectList);
-            if (selectListNode == null) {
-                log.debug("Invalid querySpecification: missing selectList");
-                return makeEmptyRowsModel(n);
-            }
-
-            List<STMTreeNode> selectSublists = selectListNode.findChildrenOfName(STMKnownRuleNames.selectSublist);
-            SQLQuerySelectionResultModel resultModel = new SQLQuerySelectionResultModel(selectListNode, selectSublists.size());
-
-            SQLQueryLexicalScope selectListScope;
-            STMTreeNode selectKeywordNode;
-            try (SQLQueryModelRecognizer.LexicalScopeHolder selectListScopeHolder = r.openScope()) {
-                selectListScope = selectListScopeHolder.lexicalScope;
-                selectKeywordNode = n.findFirstChildOfName(STMKnownRuleNames.SELECT_TERM);
-                if (selectKeywordNode == null) {
-                    log.debug("SELECT keyword is missing");
-                    return makeEmptyRowsModel(n);
-                }
-
-                for (STMTreeNode selectSublist : selectSublists) {
-                    STMTreeNode sublistNode = selectSublist.findFirstNonErrorChild();
-                    if (sublistNode != null) {
-                        switch (sublistNode.getNodeKindId()) { // selectSublist: (Asterisk|derivedColumn|qualifier Period Asterisk
-                            case SQLStandardParser.RULE_derivedColumn -> {
-                                // derivedColumn: valueExpression (asClause)?; asClause: (AS)? columnName;
-                                STMTreeNode exprNode = sublistNode.findFirstChildOfName(STMKnownRuleNames.valueExpression);
-                                SQLQueryValueExpression expr = exprNode == null ? null : r.collectValueExpression(exprNode);
-                                if (expr instanceof SQLQueryValueTupleReferenceExpression tupleRef) {
-                                    resultModel.addTupleSpec(sublistNode, tupleRef);
-                                } else {
-                                    STMTreeNode asClauseNode = sublistNode.findLastChildOfName(STMKnownRuleNames.asClause);
-                                    if (asClauseNode != null) {
-                                        STMTreeNode columnNameNode = asClauseNode.findLastChildOfName(STMKnownRuleNames.columnName);
-                                        SQLQuerySymbolEntry asColumnName = columnNameNode == null ? null : r.collectIdentifier(columnNameNode);
-                                        resultModel.addColumnSpec(sublistNode, expr, asColumnName);
-                                    } else {
-                                        resultModel.addColumnSpec(sublistNode, expr);
-                                    }
-                                }
-                            }
-                            case SQLStandardParser.RULE_anyUnexpected -> {
-                                // TODO register these pieces in the lexical scope
-                                // error in query text, ignoring it
-                            }
-                            default -> {
-                                resultModel.addCompleteTupleSpec(sublistNode);
-                            }
-                        }
-                    }
-                }
-            }
-
-            SQLQueryRowsSourceModel source = cc.isEmpty() ? makeEmptyRowsModel(n) : cc.get(0);
-            STMTreeNode tableExpr = n.findFirstChildOfName(STMKnownRuleNames.tableExpression);
-            SQLQueryRowsProjectionModel projectionModel;
-            if (tableExpr != null) {
-                selectListScope.setInterval(Interval.of(selectKeywordNode.getRealInterval().a, tableExpr.getRealInterval().a));
-
-                SQLQueryLexicalScope fromScope = new SQLQueryLexicalScope();
-
-                STMTreeNode[] filterNodes = new STMTreeNode[]{
-                    tableExpr.findFirstChildOfName(STMKnownRuleNames.whereClause),
-                    tableExpr.findFirstChildOfName(STMKnownRuleNames.groupByClause),
-                    tableExpr.findFirstChildOfName(STMKnownRuleNames.havingClause),
-                    tableExpr.findFirstChildOfName(STMKnownRuleNames.orderByClause)
-                };
-                SQLQueryValueExpression[] filterExprs = new SQLQueryValueExpression[filterNodes.length];
-                SQLQueryLexicalScope[] scopes = new SQLQueryLexicalScope[filterNodes.length + 1];
-                SQLQueryLexicalScope[] prevScopes = new SQLQueryLexicalScope[filterNodes.length + 1];
-                STMTreeNode[] nextScopeNodes = new STMTreeNode[filterNodes.length + 1];
-                {
-                    scopes[0] = fromScope;
-                    prevScopes[0] = selectListScope;
-                    int prevScopeIndex = 0;
-                    for (int i = 0; i < filterNodes.length; i++) {
-                        STMTreeNode filterNode = filterNodes[i];
-                        int scopeIndex = i + 1;
-                        if (filterNode != null) {
-                            try (SQLQueryModelRecognizer.LexicalScopeHolder exprScope = r.openScope()) {
-                                filterExprs[i] = r.collectValueExpression(filterNode);
-                                nextScopeNodes[prevScopeIndex] = filterNode;
-                                scopes[scopeIndex] = exprScope.lexicalScope;
-                                prevScopes[scopeIndex] = scopes[prevScopeIndex];
-                                prevScopeIndex = scopeIndex;
-                            }
-                        }
-                    }
-                }
-                for (int i = 0; i < scopes.length; i++) {
-                    SQLQueryLexicalScope scope = scopes[i];
-                    if (scope != null) {
-                        int from = prevScopes[i].getInterval().b;
-                        int to = nextScopeNodes[i] != null ? nextScopeNodes[i].getRealInterval().a : Integer.MAX_VALUE;
-                        scope.setInterval(Interval.of(from, to));
-                    }
-                }
-
-                projectionModel = new SQLQueryRowsProjectionModel(
-                    n, selectListScope, source, fromScope,
-                    SQLQueryRowsProjectionModel.FiltersData.of(filterExprs[0], filterExprs[1], filterExprs[2], filterExprs[3]),
-                    SQLQueryRowsProjectionModel.FiltersData.of(scopes[1], scopes[2], scopes[3], scopes[4]),
-                    resultModel
-                );
-            } else {
-                projectionModel = new SQLQueryRowsProjectionModel(n, selectListScope, source, resultModel);
-            }
-            return projectionModel;
+            return SQLQueryRowsProjectionModel.recognize(n, cc, r);
+        },
+        STMKnownRuleNames.selectStatementSingleRow, (n, cc, r) -> {
+            return SQLQuerySelectIntoModel.recognize(n, cc, r);
         },
         STMKnownRuleNames.nonjoinedTableReference, (n, cc, r) -> {
             // can they both be missing?
-            SQLQueryRowsSourceModel source = cc.isEmpty() ? r.collectTableReference(n, false) : cc.get(0);
+            STMTreeNode callNode = n.findFirstChildOfName(STMKnownRuleNames.functionCallExpression);
+            STMTreeNode tableNode = n.findFirstChildOfName(STMKnownRuleNames.tableName);
+            SQLQueryRowsSourceModel source;
+            if (!cc.isEmpty()) {
+                source = cc.getFirst();
+            } else if (tableNode != null) {
+                source = r.collectTableReference(tableNode, false);
+            } else if (callNode != null) {
+                source = new SQLQueryRowsTableProcModel(r.collectFunctionCall(callNode, null, true));
+            } else {
+                source = makeEmptyRowsModel(n);
+            }
 
             // TODO column reference at PARTITION clause
 
             STMTreeNode correlationSpecNode = n.findLastChildOfName(STMKnownRuleNames.correlationSpecification);
             if (correlationSpecNode != null) {
                 STMTreeNode correlationNameNode = correlationSpecNode.findFirstChildOfName(STMKnownRuleNames.correlationName);
-                SQLQuerySymbolEntry correlationName = correlationNameNode == null ? null : r.collectIdentifier(correlationNameNode);
+                SQLQuerySymbolEntry correlationName = correlationNameNode == null ? null : r.collectIdentifier(correlationNameNode, null);
                 if (correlationName != null) {
                     List<SQLQuerySymbolEntry> correlationColumNames = r.collectColumnNameList(correlationSpecNode);
                     source = new SQLQueryRowsCorrelatedSourceModel(n, source, correlationName, correlationColumNames);
                     SQLQueryLexicalScope aliasesScope = new SQLQueryLexicalScope(correlationColumNames.size() + 1);
+                    // TODO use r.openScope() instead?
                     aliasesScope.registerItem(correlationName);
                     correlationColumNames.forEach(aliasesScope::registerItem);
                     source.registerLexicalScope(aliasesScope);
@@ -357,10 +326,40 @@ class SQLQueryExpressionMapper extends SQLQueryTreeMapper<SQLQueryRowsSourceMode
         },
         STMKnownRuleNames.explicitTable, (n, cc, r) -> r.collectTableReference(n, false),
         STMKnownRuleNames.tableValueConstructor, (n, cc, r) -> {
-            List<SQLQueryValueExpression> values = n.findChildrenOfName(STMKnownRuleNames.rowValueConstructor).stream()
-                .map(r::collectValueExpression).toList();
-            boolean isIncomplete = n.getChildCount() != values.size() * 2 || n.hasErrorChildren();
-            return new SQLQueryRowsTableValueModel(n, values, isIncomplete);
+            List<STMTreeNode> rowNodes = n.findChildrenOfName(STMKnownRuleNames.rowValueConstructor);
+            boolean hasErrors = false;
+            List<List<SQLQueryValueExpression>> rows = new LinkedList<>();
+
+            for (STMTreeNode rowNode : rowNodes) {
+                STMTreeNode valueNode = rowNode.findFirstChildOfName(STMKnownRuleNames.rowValueConstructorElement);
+                if (valueNode != null) {
+                    hasErrors |= rowNode.hasErrorChildren() || valueNode.hasErrorChildren();
+                    STMTreeNode actualValueNode = valueNode.findFirstNonErrorChild();
+                    List<SQLQueryValueExpression> values = actualValueNode == null
+                        ? Collections.emptyList()
+                        : List.of(r.collectValueExpression(actualValueNode, null));
+                    rows.addLast(values);
+                } else {
+                    STMTreeNode rowValuesNode = rowNode.findFirstChildOfName(STMKnownRuleNames.rowValueConstructorList);
+                    if (rowValuesNode != null) {
+                        List<SQLQueryValueExpression> values = rowValuesNode.findChildrenOfName(
+                            STMKnownRuleNames.rowValueConstructorElement).stream()
+                                .map(en -> {
+                                    STMTreeNode vn = en.findFirstNonErrorChild();
+                                    return vn != null
+                                        ? r.collectValueExpression(vn, null)
+                                        : new SQLQueryValueFlattenedExpression(en, Collections.emptyList());
+                                }).toList();
+                        hasErrors |= rowNode.hasErrorChildren() || rowValuesNode.hasErrorChildren();
+                        rows.addLast(values);
+                    } else if (cc.isEmpty()) {
+                        rows.addLast(Collections.emptyList());
+                    } else {
+                        // TODO subquery as table-value rows source
+                    }
+                }
+            }
+            return new SQLQueryRowsTableValueModel(n, rows, hasErrors);
         }
     );
 
@@ -373,6 +372,11 @@ class SQLQueryExpressionMapper extends SQLQueryTreeMapper<SQLQueryRowsSourceMode
                 STMTreeNode subrootChild = findImmediateChild(subroot, subquery.getSyntaxNode());
                 this.subsourceByNode.put(subrootChild, subquery);
             }
+        }
+
+        @Nullable
+        public SQLQueryRowsSourceModel getOrNull(@NotNull STMTreeNode subrootsChild) {
+            return this.subsourceByNode.get(subrootsChild);
         }
 
         @NotNull
